Tests/Runtime2/Error/Multilingual/.build/catcharabic.pr
[
  {
    "name": "CatchArabic",
    "description": "Sets the %caughtArabic% variable to true (no additional processing).",
    "comment": null,
    "steps": [
      {
        "index": 0,
        "text": "set %caughtArabic% = true",
        "lineNumber": 2,
        "indent": 0,
        "comment": null,
        "actions": [
          {
            "module": "variable",
            "action": "set",
            "parameters": [
              {
                "name": "Name",
                "value": "%caughtArabic%",
                "type": "string"
              },
              {
                "name": "Value",
                "value": true,
                "type": "bool"
              }
            ],
            "return": null,
            "defaults": null
          }
        ],
        "intent": null,
        "onError": null,
        "cache": null,
        "timeout": null,
        "waitForExecution": true
      }
    ],
    "subGoals": [],
    "visibility": 1,
    "path": "/CatchArabic.goal",
    "prPath": "/.build/catcharabic.pr",
    "hash": "64dc901c857473f38e7ff10967d149b8f277a68d993a14db776d641cbd649e86",
    "builderVersion": "0.3",
    "isSetup": false,
    "isEvent": false,
    "isSystem": false,
    "isTest": false,
    "inputParameters": null
  }
]